// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snapshots Default button 1`] = `
<button
  className="app-btn"
  type="button"
>
  Submit
</button>
`;

exports[`<Button /> Snapshots Reset button 1`] = `
<input
  className="app-btn app-btn--cancel"
  type="reset"
  value="Cancel"
/>
`;

exports[`<Button /> Snapshots Submit button 1`] = `
<button
  className="app-btn app-btn--submit"
  type="submit"
>
  Submit
</button>
`;
